--- a/galeri.html
+++ b/galeri.html
@@ -24,9 +24,9 @@
         
         <div class="navMenu">
           <ul>
-            <li><a href="" class="nav-link">Beranda</a></li>
-            <li><a href="" class="nav-link">Galeri</a></li>
-            <li><a href="" class="navlink">Kontak</a></li>
+            <li><a href="./index.html" class="nav-link">Beranda</a></li>
+            <li><a href="#" class="nav-link">Galeri</a></li>
+            <li><a href="./contact.html" class="navlink">Kontak</a></li>
           </ul>
         </div>
         <div class="hamburger">
