--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         
         <div class="navMenu">
           <ul>
-            <li><a href="" class="navLink">Beranda</a></li>
-            <li><a href="" class="navLink">Galeri</a></li>
-            <li><a href="" class="navLink">Kontak</a></li>
+            <li><a href="#" class="navLink">Beranda</a></li>
+            <li><a href="./galeri.html" class="navLink">Galeri</a></li>
+            <li><a href="./contact.html" class="navLink">Kontak</a></li>
           </ul>
         </div>
         <div class="hamburger">
