--- a/galeri.html
+++ b/galeri.html
@@ -10,11 +10,14 @@
   <link rel="stylesheet" href="./css/galeri.css">
   <link rel="stylesheet" href="./css/all.css">
   <link rel="stylesheet" href="./css/navbar.css">
+  <link rel="stylesheet" href="./css/fakeLoader.css">
   
   <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 </head>
 
 <body>
+  <!-- loading -->
+  <div class="fakeLoader"></div>
   
   <!-- navbar -->
   <section class="navbar">
@@ -40,6 +43,17 @@
   
   <!-- javascript src -->
   <script src="./js/navbar.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="./js/fakeLoader.js"></script>
+
+        <script>
+            $(document).ready(function () {
+                $.fakeLoader({
+                    bgColor: '#fbfbfa',
+                    spinner:"spinner2"
+                });
+            });
+        </script>
   
 </body>
 </html>
