--- a/index.html
+++ b/index.html
@@ -12,12 +12,19 @@
   <link rel="stylesheet" href="./css/navbar.css">
   <link rel="stylesheet" href="./css/fakeLoader.css">
   
+  <!-- jquery -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+  
+  <!-- kits fontawesome -->
+  <script src="https://kit.fontawesome.com/067f89a637.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
   <!-- loading -->
   <div class="fakeLoader"></div>
+  
+  <!-- backToTop btn -->
+  <div class="scrollTop" onclick="scrollToTop()"><i class="fa-solid fa-angles-up"></i></div>
   
   <!-- navbar -->
   <section class="navbar">
@@ -135,6 +142,7 @@
   <!-- javascript src -->
   <script src="./js/navbar.js"></script>
   <script src="./js/typing.js"></script>
+  <script src="./js/backToTop.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="./js/fakeLoader.js"></script>
 
