--- a/galeri.html
+++ b/galeri.html
@@ -12,7 +12,11 @@
   <link rel="stylesheet" href="./css/navbar.css">
   <link rel="stylesheet" href="./css/fakeLoader.css">
   
+  <!-- jquery -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+  
+  <!-- kits fontawesome -->
+  <script src="https://kit.fontawesome.com/067f89a637.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
