--- a/daftar/guru.html
+++ b/daftar/guru.html
@@ -4,17 +4,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>ERPEEL4 | Galeri</title>
-  
+  <title>ERPEEL4 | Daftar Guru</title>
+
   <!-- css link -->
-  <link rel="stylesheet" href="./css/galeri.css">
-  <link rel="stylesheet" href="./css/all.css">
-  <link rel="stylesheet" href="./css/navbar.css">
-  <link rel="stylesheet" href="./css/fakeLoader.css">
-  
+  <link rel="stylesheet" href="./css/guru.css">
+  <link rel="stylesheet" href="../css/all.css">
+  <link rel="stylesheet" href="../css/navbar.css">
+  <link rel="stylesheet" href="../css/fakeLoader.css">
+
   <!-- jquery -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-  
+
   <!-- kits fontawesome -->
   <script src="https://kit.fontawesome.com/067f89a637.js" crossorigin="anonymous"></script>
 </head>
@@ -22,7 +22,10 @@
 <body>
   <!-- loading -->
   <div class="fakeLoader"></div>
-  
+
+  <!-- backToTop btn -->
+  <div class="scrollTop" onclick="scrollToTop()"><i class="fa-solid fa-angles-up"></i></div>
+
   <!-- navbar -->
   <section class="navbar">
     <header>
@@ -31,18 +34,18 @@
         
         <div class="navMenu">
           <ul>
-            <li><a href="./index.html" class="navLink">Beranda</a></li>
+            <li><a href="../index.html" class="navLink">Beranda</a></li>
             <li>
               <label for="btn1" class="show">Daftar &plus;</label>
               <a href="#" class="hidden">Daftar</a>
               <input type="checkbox" id="btn1">
               <ul>
-                <li><a href="./daftar/murid.html">Siswa/i</a></li>
-                <li class="nbb"><a href="./daftar/guru.html">Guru</a></li>
+                <li><a href="./murid.html">Siswa/i</a></li>
+                <li class="nbb"><a href="#">Guru</a></li>
               </ul>
             </li>
-            <li><a href="#" class="navLink">Galeri</a></li>
-            <li><a href="./contact.html" class="navLink">Kontak</a></li>
+            <li><a href="../galeri.html" class="navLink">Galeri</a></li>
+            <li><a href="../contact.html" class="navLink">Kontak</a></li>
           </ul>
         </div>
         <div class="hamburger">
@@ -53,13 +56,11 @@
       </nav>
     </header>
   </section>
-  
-  <!-- javascript src -->
-  <script src="./js/navbar.js"></script>
-  <script src="./js/backToTop.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="./js/fakeLoader.js"></script>
 
+  <script src="../js/navbar.js"></script>
+  <script src="../js/backToTop.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="../js/fakeLoader.js"></script>
         <script>
             $(document).ready(function () {
                 $.fakeLoader({
@@ -68,6 +69,6 @@
                 });
             });
         </script>
-  
 </body>
+
 </html>
