--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
             <li class="menu-item menu-item-has-children">
               <a href="#" data-toggle="sub-menu">Daftar <i class="plus"></i></a>
               <ul class="sub-menu">
-                <li class="menu-item"><a href="#">Siswa/i</a></li>
-                <li class="menu-item"><a href="#">Guru</a></li>
+                <li class="menu-item"><a href="./daftar/murid.html">Siswa/i</a></li>
+                <li class="menu-item"><a href="./daftar/guru.html">Guru</a></li>
               </ul>
             </li>
-            <li class="menu-item"><a href="#">Galeri</a></li>
-            <li class="menu-item"><a href="#">Kontak</a></li>
+            <li class="menu-item"><a href="./galeri.html">Galeri</a></li>
+            <li class="menu-item"><a href="./contact.html">Kontak</a></li>
           </ul>
         </nav>
       </div>
