--- a/galeri.html
+++ b/galeri.html
@@ -31,11 +31,11 @@
           <a href="#">ER<span>PE</span><span class="kuning">EL 4</span></a>
         </div>
         
-        <div class="open-nav-menu">
-          <span class="bar1"></span>
-          <span class="bar2"></span>
-          <span class="bar3"></span>
-        </div>
+        <button class="hamburger-toggler">
+          <span class="hamburger-icon">
+            <span></span>
+          </span>
+        </button>
         
         <!-- nav start -->
         <nav class="nav-menu">
