--- a/daftar/murid.html
+++ b/daftar/murid.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="../css/all.css">
   <link rel="stylesheet" href="../css/navbar.css">
   <link rel="stylesheet" href="../css/fakeLoader.css">
+  <link rel="stylesheet" href="../css/footer.css">
 
   <!-- jquery -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
@@ -60,6 +61,35 @@
   </header>
   
   
+  
+  
+  
+  
+  <!-- footer -->
+  <footer>
+    <div class="waves">
+      <div class="wave" id="wave1"></div>
+      <div class="wave" id="wave2"></div>
+      <div class="wave" id="wave3"></div>
+      <div class="wave" id="wave4"></div>
+    </div>
+    <ul class="social-icon">
+      <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+      <li><a href="#"><i class="fab fa-whatsapp"></i></a></li>
+      <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+      <li><a href="#"><i class="fab fa-github"></i></a></li>
+    </ul>
+    <ul class="menu">
+      <li><a href="../index.html">Beranda</a></li>
+      <li><a href="#">Siswa/i</a></li>
+      <li><a href="./guru.html">Guru</a></li>
+      <li><a href="../galeri.html">Galeri</a></li>
+      <li><a href="../contact.html">Kontak</a></li>
+    </ul>
+    <p>&copy;2022 RPL 4 SMK Negeri 4 Kuningan | All Rights Reversed</p>
+  </footer>
+  
+  <!-- Javascript src -->
   <script src="../js/navbar.js"></script>
   <script src="../js/backToTop.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
