--- a/index.html
+++ b/index.html
@@ -336,7 +336,28 @@
   
   
   <!-- footer -->
-  
+  <footer>
+    <div class="waves">
+      <div class="wave" id="wave1"></div>
+      <div class="wave" id="wave2"></div>
+      <div class="wave" id="wave3"></div>
+      <div class="wave" id="wave4"></div>
+    </div>
+    <ul class="social-icon">
+      <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+      <li><a href="#"><i class="fab fa-whatsapp"></i></a></li>
+      <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+      <li><a href="#"><i class="fab fa-github"></i></a></li>
+    </ul>
+    <ul class="menu">
+      <li><a href="#">Beranda</a></li>
+      <li><a href="./daftar/murid.html">Siswa/i</a></li>
+      <li><a href="./daftar/guru.html">Guru</a></li>
+      <li><a href="./galeri.html">Galeri</a></li>
+      <li><a href="./contact.html">Kontak</a></li>
+    </ul>
+    <p>&copy;2022 RPL 4 SMK Negeri 4 Kuningan | All Rights Reversed</p>
+  </footer>
   
   
   
