--- a/galeri.html
+++ b/galeri.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
 
 <head>
@@ -62,8 +61,67 @@
   </header>
   
   
-  
-  
+  <!-- gallery section -->
+  <section class="gallerySection">
+    <div class="wrapper">
+      <div class="gallery">
+        <div class="image">
+          <span>
+            <img src="./image/img-1.jpg" alt="">
+          </span>
+        </div>
+        <div class="image">
+          <span>
+            <img src="./image/img-2.jpg" alt="">
+          </span>
+        </div>
+        <div class="image">
+          <span>
+            <img src="./image/img-3.jpg" alt="">
+          </span>
+        </div>
+        <div class="image">
+          <span>
+            <img src="./image/img-4.jpg" alt="">
+          </span>
+        </div>
+        <div class="image">
+          <span>
+            <img src="./image/img-5.jpg" alt="">
+          </span>
+        </div>
+        <div class="image">
+          <span>
+            <img src="./image/img-6.jpg" alt="">
+          </span>
+        </div>
+        <div class="image">
+          <span>
+            <img src="./image/img-7.jpg" alt="">
+          </span>
+        </div>
+      </div>
+    </div>
+    
+    <div class="preview-box">
+      <div class="details">
+        <span class="title">Image <p class="current-img"></p> of <p class="total-img"></p>
+        </span>
+       <!-- <span class="icon fa-solid fa-circle-xmark"></span> -->
+       <span class="close warp black"></span>
+      </div>
+      <div class="image-box">
+        <div class="slide prev">
+          <i class="fa-solid fa-arrow-left"></i>
+        </div>
+        <div class="slide next">
+          <i class="fa-solid fa-arrow-right"></i>
+        </div>
+        <img src="" alt="">
+      </div>
+    </div>
+    <div class="shadow"></div>
+  </section>
   
   
   <!-- footer -->
@@ -95,6 +153,7 @@
   <script src="./js/backToTop.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="./js/loading.js"></script>
+  <script src="./js/galeri.js"></script>
   
 </body>
 </html>
