--- a/daftar/murid.html
+++ b/daftar/murid.html
@@ -66,6 +66,231 @@
   </header>
   
   
+  <!-- table -->
+  <div class="tableSection">
+    <h1>daftar murid rpl 4 <br> smk negeri 4 kuningan</h1>
+  </div>
+  <table>
+    <thead>
+      <tr>
+        <th>Nama</th>
+        <th>Jenis Kelamin</th>
+        <th>Tempat, Tanggal Lahir</th>
+        <th>Alamat</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td data-column="Nama">AGNIA TRI LESTARI</td>
+        <td data-column="Jenis Kelamin">Perempuan</td>
+        <td data-column="TTL">Kuningan, 3 Juni 2006</td>
+        <td data-column="Alamat">Dusun Pahing, Cikeusal</td>
+      </tr>
+      <tr>
+        <td data-column="Nama">AHMAD ARI RIFAI</td>
+        <td data-column="Jenis Kelamin">Laki-laki</td>
+        <td data-column="TTL">Cirebon, 22 Juli 2005</td>
+        <td data-column="Alamat">Dusun Kliwon, Waleddesa</td>
+      </tr>
+      <tr>
+        <td data-column="Nama">AJI NUR AJI</td>
+        <td data-column="Jenis Kelamin">Laki-laki</td>
+        <td data-column="TTL">Kuningan, 9 Maret 2006</td>
+        <td data-column="Alamat">Dusun Cimulya, Cihideunghilir</td>
+      </tr>
+      <tr>
+        <td data-column="Nama">ALIYYAH BUNGA HERYANA</td>
+        <td data-column="Jenis Kelamin">Perempuan</td>
+        <td data-column="TTL">Cirebon, 1 Juli 2006</td>
+        <td data-column="Alamat">Babatan, Waleddesa</td>
+      </tr>
+      <tr>
+        <td data-column="Nama">ARIS AULANA NURSANI</td>
+        <td data-column="Jenis Kelamin">Laki-laki</td>
+        <td data-column="TTL">Cirebon, 16 April 2007</td>
+        <td data-column="Alamat">Pangeran Sutajaya, Pabuaran Lor</td>
+      </tr>
+      <tr>
+        <td data-column="Nama">CANTIKA HERLINA</td>
+        <td data-column="Jenis Kelamin">Perempuan</td>
+        <td data-column="TTL">Cirebon, 24 April 2007</td>
+        <td data-column="Alamat">Sangkan Urip, Cigobangwangi</td>
+      </tr>
+      <tr>
+        <td data-column="Nama">DELA LINDA NINGRUM</td>
+        <td data-column="Jenis Kelamin">Perempuan</td>
+        <td data-column="TTL">Cirebon, 30 Desember 2005</td>
+        <td data-column="Alamat">Sangkan Urip, Cigobangwangi</td>
+      </tr>
+      <tr>
+        <td data-column="Nama">DIMAS PRASETIYO</td>
+        <td data-column="Jenis Kelamin">Laki-laki</td>
+        <td data-column="TTL">Kuningan, 17 Agustus 2005</td>
+        <td data-column="Alamat">Cikeusik</td>
+      </tr>
+      <tr>
+        <td data-column="Nama">EGI BALYANI</td>
+        <td data-column="Jenis Kelamin">Laki-laki</td>
+        <td data-column="TTL">Kuningan, 8 Oktober 2005</td>
+        <td data-column="Alamat">Cikeusik</td>
+      </tr>
+      <tr>
+        <td data-column="Nama">FALAH FAUZAN ANANTA</td>
+        <td data-column="Jenis Kelamin">Laki-laki</td>
+        <td data-column="TTL">Cirebon, 7 November 2006</td>
+        <td data-column="Alamat">Letjen S. Paran, Parubaranwetan</td>
+      </tr>
+      <tr>
+        <td data-column="Nama">GINA RAHMA JULIANA</td>
+        <td data-column="Jenis Kelamin">Perempuan</td>
+        <td data-column="TTL">Kuningan, 30 Juni 2006</td>
+        <td data-column="Alamat">Dusun Kliwon, Cikeusal</td>
+      </tr>
+      <tr>
+        <td data-column="Nama">GISTA AULIA</td>
+        <td data-column="Jenis Kelamin">Perempuan</td>
+        <td data-column="TTL">Banten, 1 Januari 2006</td>
+        <td data-column="Alamat">KP. Cicae, Ciarga</td>
+      </tr>
+      <tr>
+        <td data-column="Nama">HISYAM MUZAHDI</td>
+        <td data-column="Jenis Kelamin">Laki-laki</td>
+        <td data-column="TTL">Brebes, 1 November 2006</td>
+        <td data-column="Alamat">-</td>
+      </tr>
+      <tr>
+        <td data-column="Nama">KARTIKA</td>
+        <td data-column="Jenis Kelamin">Perempuan</td>
+        <td data-column="TTL">Kuningan, 11 September 2005</td>
+        <td data-column="Alamat">Cikancas</td>
+      </tr>
+      <tr>
+        <td data-column="Nama">LUTFI RAMDANI</td>
+        <td data-column="Jenis Kelamin">Laki-laki</td>
+        <td data-column="TTL">Kuningan, 26 September 2006</td>
+        <td data-column="Alamat">Dusun Manis, Kalimanggiswetan</td>
+      </tr>
+      <tr>
+        <td data-column="Nama">MELINDA MARDIANA SAPUTRI</td>
+        <td data-column="Jenis Kelamin">Perempuan</td>
+        <td data-column="TTL">Kuningan, 1 Mei 2006</td>
+        <td data-column="Alamat">Dusun Wage, Cieurih</td>
+      </tr>
+      <tr>
+        <td data-column="Nama">MOH. FIRMAN PEBRIANA ATIC</td>
+        <td data-column="Jenis Kelamin">Laki-laki</td>
+        <td data-column="TTL">Cirebon, 4 Februari 2006</td>
+        <td data-column="Alamat">Letjen S. Paran, Parubaranwetan</td>
+      </tr>
+      <tr>
+        <td data-column="Nama">MUHAMAD YUSUF ARDABILA</td>
+        <td data-column="Jenis Kelamin">Laki-laki</td>
+        <td data-column="TTL">Kuningan, 4 April 2006</td>
+        <td data-column="Alamat">Dusun Kliwon, Cikeusal</td>
+      </tr>
+      <tr>
+        <td data-column="Nama">MUHAMAD DAYA RAYA</td>
+        <td data-column="Jenis Kelamin">Laki-laki</td>
+        <td data-column="TTL">Kuningan, 9 Agustus 2006</td>
+        <td data-column="Alamat">Dusun Pon, Geresik</td>
+      </tr>
+      <tr>
+        <td data-column="Nama">MUHAMAD RAMADHAN FADHILLAH</td>
+        <td data-column="Jenis Kelamin">Laki-laki</td>
+        <td data-column="TTL">Kuningan, 28 Oktober 2005</td>
+        <td data-column="Alamat">Dusun Puhun, Cidahu</td>
+      </tr>
+      <tr>
+        <td data-column="Nama">MUHAMAD RIFA'I</td>
+        <td data-column="Jenis Kelamin">Laki-laki</td>
+        <td data-column="TTL">Kuningan, 8 Desember 2005</td>
+        <td data-column="Alamat">Blok 4, Pabuarankidul</td>
+      </tr>
+      <tr>
+        <td data-column="Nama">NUR SRI WULAN</td>
+        <td data-column="Jenis Kelamin">Perempuan</td>
+        <td data-column="TTL">Kuningan, 4 April 2005</td>
+        <td data-column="Alamat">Dusun Cikawung, Cihideunghilir</td>
+      </tr>
+      <tr>
+        <td data-column="Nama">PANDU</td>
+        <td data-column="Jenis Kelamin">Laki-laki</td>
+        <td data-column="TTL">Cirebon, 15 April 2006</td>
+        <td data-column="Alamat">Siliwangi, Waledkota</td>
+      </tr>
+      <tr>
+        <td data-column="Nama">REVA REVIYANA</td>
+        <td data-column="Jenis Kelamin">Perempuan</td>
+        <td data-column="TTL">Kuningan, 5 Juli 2006</td>
+        <td data-column="Alamat">Dusun Cikawung, Cihideunghilir</td>
+      </tr>
+      <tr>
+        <td data-column="Nama">RIDWAN FAUZZI</td>
+        <td data-column="Jenis Kelamin">Laki-laki</td>
+        <td data-column="TTL">Cirebon, 2 Maret 2005</td>
+        <td data-column="Alamat">Dusun Singkup II, Tonjong</td>
+      </tr><tr>
+        <td data-column="Nama">RINANDA OKTAVIANI</td>
+        <td data-column="Jenis Kelamin">Perempuan</td>
+        <td data-column="TTL">Kuningan, 17 Oktober 2005</td>
+        <td data-column="Alamat">Cimahi</td>
+      </tr>
+     <tr>
+       <td data-column="Nama">SALLY GHASSANI</td>
+       <td data-column="Jenis Kelamin">Perempuan</td>
+       <td data-column="TTL">Jakarta, 4 Februari 2006</td>
+       <td data-column="Alamat">Waledkota</td>
+     </tr>
+     <tr>
+       <td data-column="Nama">SINDI RAHAYU</td>
+       <td data-column="Jenis Kelamin">Perempuan</td>
+       <td data-column="TTL">Kuningan, 19 November 2005</td>
+       <td data-column="Alamat">Langgersari, Gunung sari</td>
+     </tr>
+     <tr>
+       <td data-column="Nama">SYAHRUL HISAM</td>
+       <td data-column="Jenis Kelamin">Laki-laki</td>
+       <td data-column="TTL">Cirebon, 25 Maret 2006</td>
+       <td data-column="Alamat">Dusun Wage, Jatiseeng</td>
+     </tr>
+     <tr>
+       <td data-column="Nama">TIA NIANDARI</td>
+       <td data-column="Jenis Kelamin">Perempuan</td>
+       <td data-column="TTL">Kuningan, 8 Juli 2005</td>
+       <td data-column="Alamat">Dusun Manis, Jatimulya</td>
+     </tr>
+     <tr>
+       <td data-column="Nama">TINA GUSTIANI</td>
+       <td data-column="Jenis Kelamin">Perempuan</td>
+       <td data-column="TTL">Kuningan, 24 Agustus 2005</td>
+       <td data-column="Alamat">Dusun Manis 2, Mulyajaya</td>
+     </tr>
+     <tr>
+       <td data-column="Nama">VINA AULIA</td>
+       <td data-column="Jenis Kelamin">Perempuan</td>
+       <td data-column="TTL">Cirebon, 14 April 2007</td>
+       <td data-column="Alamat">Blok III, Ciuyah</td>
+     </tr>
+     <tr>
+       <td data-column="Nama">WARTINO</td>
+       <td data-column="Jenis Kelamin">Laki-laki</td>
+       <td data-column="TTL">Kuningan, 29 April 2006</td>
+       <td data-column="Alamat">Dusun Manis 2, Mulyajaya</td>
+     </tr>
+     <tr>
+       <td data-column="Nama">ABIMANYU GALUH ANANTA</td>
+       <td data-column="Jenis Kelamin">Laki-laki</td>
+       <td data-column="TTL">-</td>
+       <td data-column="Alamat">-</td>
+     </tr>
+    </tbody>
+  </table>
+  
+  
+  
+  
+  
+  
   
   
   
