--- a/daftar/guru.html
+++ b/daftar/guru.html
@@ -64,9 +64,334 @@
     </div>
   </header>
   
-  
-  
-  
+  <!-- table section -->
+  <section class="table">
+    <span>Daftar Guru<p>SMK Negeri 4 Kuningan</p></span>
+    <input type="text" placeholder="Cari Nama / Mapel.." id="myInput" onkeyup="myFunction()">
+    
+    <table id="myTable">
+      <tr>
+        <th>Nama</th>
+        <th>Mata Pelajaran</th>
+      </tr>
+      <tr>
+        <td>Ramdan, S.Pd., M.Si.</td>
+        <td>Kepala Sekolah</td>
+      </tr>
+      <tr>
+        <td>Drs. Taryono, M.Pd.I</td>
+        <td>PAI</td>
+      </tr>
+      <tr>
+        <td>Drs. Amir Deden Riskomar</td>
+        <td>BP/BK</td>
+      </tr>
+      <tr>
+        <td>Watmo, S.Pd</td>
+        <td>Bahasa Indonesia</td>
+      </tr>
+      <tr>
+        <td>Hj. Teti Kusmiati, S.Pd, M.Pd.I</td>
+        <td>Bahasa Inggris</td>
+      </tr>
+      <tr>
+        <td>Tatat Roslita Sugiarsih, S.H.</td>
+        <td>PPKn</td>
+      </tr>
+      <tr>
+        <td>Retno sari, S.Pd</td>
+        <td>Pro. TITL</td>
+      </tr>
+      <tr>
+        <td>Adies Azis, S.Pd</td>
+        <td>Pro. TITL</td>
+      </tr>
+      <tr>
+        <td>Sri Mulyati, S.Pd</td>
+        <td>Bahasa Inggris</td>
+      </tr>
+      <tr>
+        <td>Edy Suwarno, S.Pd</td>
+        <td>PKK</td>
+      </tr>
+      <tr>
+        <td>Titik Setiawati, S.Pd</td>
+        <td>Seni Budaya</td>
+      </tr>
+      <tr>
+        <td>Siti Apipah, S.Pd., M.Pd.</td>
+        <td>Pro AKL & P5 dan Budker</td>
+      </tr>
+      <tr>
+        <td>Asep Saprudin, S.Pd.</td>
+        <td>Pro. OTKP</td>
+      </tr>
+      <tr>
+        <td>Slamet Riyadi,S.Pd</td>
+        <td>Pro TITL & PKK</td>
+      </tr>
+      <tr>
+        <td>Engkos Kosasih, SPd</td>
+        <td>Pro. TKRO</td>
+      </tr>
+      <tr>
+        <td>Nurhayati, S.Pd</td>
+        <td>Pro. OTKP</td>
+      </tr>
+      <tr>
+        <td>Maman Lukmanul Hakim, S.Pd</td>
+        <td>Penjasorkes & PAI</td>
+      </tr>
+      <tr>
+        <td>Kasum, S.Pd.I</td>
+        <td>Sejarah Indonesia</td>
+      </tr>
+      <tr>
+        <td>Lia Elyani, S.Pd</td>
+        <td>IPA/S</td>
+      </tr>
+      <tr>
+        <td>Jaenal Mutaqin, S.T.</td>
+        <td>Pro TITL</td>
+      </tr>
+      <tr>
+        <td>Dewi Yulianti S.Pd.</td>
+        <td>Bahasa Indonesia</td>
+      </tr>
+      <tr>
+        <td>Silvia Yuandari, S.E.</td>
+        <td>Pro AKL</td>
+      </tr>
+      <tr>
+        <td>Toni Suhartono,S.Pd</td>
+        <td>Matematika</td>
+      </tr>
+      <tr>
+        <td>Dede Priana Putra, S.Pd</td>
+        <td>B. Sunda </td>
+      </tr>
+      <tr>
+        <td>Wawan Hermawan, S.Pd.</td>
+        <td>Pro. OTKP</td>
+      </tr>
+      <tr>
+        <td>Anto Kuswanto, S.Pd</td>
+        <td>Pro TBSM & PKK</td>
+      </tr>
+      <tr>
+        <td>Fath Faizal Mubarak, S.Pd.</td>
+        <td>Pro. RPL & P5 dan Budker</td>
+      </tr>
+      <tr>
+        <td>Candra Apriana, S.Pd.</td>
+        <td>Pro. RPL & PKK</td>
+      </tr>
+      <tr>
+        <td>Muchammad Nur'syarif, S.Kom.</td>
+        <td>Pro. RPL</td>
+      </tr>
+      <tr>
+        <td>Egi Samsul Mu'arif, S.Pd.</td>
+        <td>Pro. RPL</td>
+      </tr>
+      <tr>
+        <td>Nunu Nugraha, S.Pd</td>
+        <td>Penjasorkes & PKK</td>
+      </tr>
+      <tr>
+        <td>Euis Herawati, S.Pd</td>
+        <td>Matematika & PAI</td>
+      </tr>
+      <tr>
+        <td>Casmadi, S.T</td>
+        <td>Pro TKRO</td>
+      </tr>
+      <tr>
+        <td>Dadang Darmawansyah, S.Kom.</td>
+        <td>Prod RPL</td>
+      </tr>
+      <tr>
+        <td>Esa Daniarsa, S.Kom</td>
+        <td>Prod RPL</td>
+      </tr>
+      <tr>
+        <td>Dadi Permadi, S.Hum</td>
+        <td>PAI</td>
+      </tr>
+      <tr>
+        <td>Juhana, A.Md</td>
+        <td>Pro. TITL</td>
+      </tr>
+      <tr>
+        <td>Teguh Saputra, S.Pd</td>
+        <td>Pro TBSM, Pro OTKP, PKK</td>
+      </tr>
+      <tr>
+        <td>Nia Guniarsih, S.Pd</td>
+        <td>Bahasa Inggris</td>
+      </tr>
+      <tr>
+        <td>Nurlianawati, S.Pd</td>
+        <td>Matematika</td>
+      </tr>
+      <tr>
+        <td>Rini Harini, S.Pd</td>
+        <td>Pro AKL</td>
+      </tr>
+      <tr>
+        <td>Mala Nurohmawatie, S.Pd.</td>
+        <td>Bahasa Indonesia </td>
+      </tr>
+      <tr>
+        <td>Dian Rosdiana, S.Pd.</td>
+        <td>Penjasorkes & PKK</td>
+      </tr>
+      <tr>
+        <td>Rusman, S.Pd.</td>
+        <td>Pro. TBSM & IPA/S</td>
+      </tr>
+      <tr>
+        <td>Roni Purnama</td>
+        <td>Penjasorkes & PKK</td>
+      </tr>
+      <tr>
+        <td>Beri Epridiansyah, S.Pd.</td>
+        <td>PPKn</td>
+      </tr>
+      <tr>
+        <td>Eva Everlina Tioria, S.Kom</td>
+        <td>Pro RPL & PKK</td>
+      </tr>
+      <tr>
+        <td>Neni Sri Wahyuni, S.Pd.</td>
+        <td>Pro AKL & PKK</td>
+      </tr>
+      <tr>
+        <td>Didi Ubaidilah, S.Pd.</td>
+        <td>Pro. OTKP</td>
+      </tr>
+      <tr>
+        <td>Sarina Tastianty, S.Pd.</td>
+        <td>Matematika</td>
+      </tr>
+      <tr>
+        <td>Hengki Pratama, S.Pd.</td>
+        <td>Bahasa Indonesia </td>
+      </tr>
+      <tr>
+        <td>Idar Badaruddin Asyuyuti, S.Pd.</td>
+        <td>Pro TKRO</td>
+      </tr>
+      <tr>
+        <td>Otin Desi Susanti, S.Pd.</td>
+        <td>Pro AKL</td>
+      </tr>
+      <tr>
+        <td>Yayan Yusmana, S.T.</td>
+        <td>Pro TKRO</td>
+      </tr>
+      <tr>
+        <td>Risyantinengsih, S.E.</td>
+        <td>Pro AKL</td>
+      </tr>
+      <tr>
+        <td>Nurul Ainna Ningtyas, S.Pd.</td>
+        <td>Matematika</td>
+      </tr>
+      <tr>
+        <td>Rini Nur Fitriani, S.Pd,</td>
+        <td>Matematika</td>
+      </tr>
+      <tr>
+        <td>Susilawati, S.T.</td>
+        <td>IPA/S </td>
+      </tr>
+      <tr>
+        <td>Shindi Triandini, S.Pd.</td>
+        <td>IPA/S & PKK</td>
+      </tr>
+      <tr>
+        <td>Fakhrur Rafiulhaq, S.Pd.</td>
+        <td>Pro. TKRO</td>
+      </tr>
+      <tr>
+        <td>Ilfa Nurlatifah, S.Pd</td>
+        <td>Informatika & PKK TITL</td>
+      </tr>
+      <tr>
+        <td>Suhendra, S.Kom</td>
+        <td>Pro RPL, P5 dan Budker</td>
+      </tr>
+      <tr>
+        <td>Eka Mutia Putri, S.Kom</td>
+        <td>Pro RPL & PKK</td>
+      </tr>
+      <tr>
+        <td>Heri Kurniawan, S.Kom</td>
+        <td>Pro. OTKP</td>
+      </tr>
+      <tr>
+        <td>Ulfa Nur Agussetia, S.Pd.</td>
+        <td>B Inggris</td>
+      </tr>
+      <tr>
+        <td>Nurul Rahmayani, S.Pd</td>
+        <td>Pro RPL, P5 dan Budker</td>
+      </tr>
+      <tr>
+        <td>Bambang Eka Permana, S.Pd.</td>
+        <td>PPKn</td>
+      </tr>
+      <tr>
+        <td>Muhammad Ali Waffa, S.T.</td>
+        <td>P5 dan Budaya Kerja</td>
+      </tr>
+      <tr>
+        <td>Suhendi, S.T.</td>
+        <td>Pro TBSM </td>
+      </tr>
+      <tr>
+        <td>Siti Khumaeroh F. D., S.Pd.</td>
+        <td>Seni Budaya</td>
+      </tr>
+      <tr>
+        <td>Inne Rizka Rachmawati, S.Pd.</td>
+        <td>BP/BK</td>
+      </tr>
+      <tr>
+        <td>Imam Santoso, M.Pd. </td>
+        <td>Matematika</td>
+      </tr>
+      <tr>
+        <td>Dede Nuryaman, S.Pd.</td>
+        <td>PAI</td>
+      </tr>
+      <tr>
+        <td>Hoerudin, ST.</td>
+        <td>Pro TBSM, P5 dan Bdy. Kerja</td>
+      </tr>
+      <tr>
+        <td>Abdul Husen, S.Pd.</td>
+        <td>Pro TKRO</td>
+      </tr>
+      <tr>
+        <td>Didin Abidin, S.E.</td>
+        <td>P5 dan Budaya Kerja</td>
+      </tr>
+      <tr>
+        <td>Rifqi Fauzi, S.Pd.</td>
+        <td>Bahasa Inggris</td>
+      </tr>
+      <tr>
+        <td>Andri Amirudin, S.Pd.</td>
+        <td>Bahasa Indonesia</td>
+      </tr>
+      <tr>
+        <td>Rian Agustiana, S.Pd.</td>
+        <td>Pro TKRO</td>
+      </tr>
+    </table>
+  </section>
   
   
   <!-- footer -->
@@ -98,6 +423,7 @@
   <script src="../js/backToTop.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="../js/loading.js"></script>
+  <script src="./js/guru.js"></script>
 
 </body>
 
