--- a/index.html
+++ b/index.html
@@ -348,10 +348,10 @@
       <div class="wave" id="wave4"></div>
     </div>
     <ul class="social-icon">
-      <li><a href="#"><i class="fab fa-facebook"></i></a></li>
-      <li><a href="#"><i class="fab fa-whatsapp"></i></a></li>
-      <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-      <li><a href="#"><i class="fab fa-github"></i></a></li>
+      <li><a href="https://www.facebook.com/smkn4kng/"><i class="fab fa-facebook"></i></a></li>
+      <li><a href="https://wa.me/qr/5NH7NRB42TX4G1"><i class="fab fa-whatsapp"></i></a></li>
+      <li><a href="https://instagram.com/rpl_smkn4kng?igshid=YmMyMTA2M2Y="><i class="fab fa-instagram"></i></a></li>
+      <li><a href="https://github.com/Erpeel4kng"><i class="fab fa-github"></i></a></li>
     </ul>
     <ul class="menu">
       <li><a href="#">Beranda</a></li>
