--- a/daftar/murid.html
+++ b/daftar/murid.html
@@ -7,7 +7,7 @@
   <title>ERPEEL4 | Daftar Siswa/i</title>
 
   <!-- css link -->
-  <link rel="stylesheet" href="./css/murid.css">
+  <link rel="stylesheet" href="./css/daftar.css">
   <link rel="stylesheet" href="../css/all.css">
   <link rel="stylesheet" href="../css/navbar.css">
   <link rel="stylesheet" href="../css/loading.css">
@@ -69,7 +69,7 @@
   <!-- table -->
   <section class="table">
     <span>Daftar Siswa/i RPL 4<p>SMK Negeri 4 Kuningan</p></span>
-    <input type="text" placeholder="Cari Nama.." id="myInput" onkeyup="myFunction()">
+    <input type="text" placeholder="Cari disini.." id="myInput" onkeyup="myFunction()">
     <table id="table">
       <thead>
         <tr>
@@ -318,7 +318,7 @@
   <script src="../js/backToTop.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="../js/loading.js"></script>
-  <script src="./js/murid.js"></script>
+  <script src="./js/daftar.js"></script>
 
 </body>
 
