--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
       
       <div class="modalBody">
         <p>PHP adalah singkatan rekursif untuk "PHP: Hypertext Preprocessor", yaitu bahasa pemrograman yang digunakan secara luas untuk penanganan pembuatan dan pengembangan sebuah situs web dan bisa digunakan bersamaan dengan HTML. PHP adalah bagian dari bahasa skrip, seperti JavaScript dan Phyton.</p>
-        <p>Hypertext Preprocessor atau PHP adalah suatu bahasa pemrograman yang digunakan untuk membuat web dinamis, meskipun bisa juga digunakan untuk membuat program lain. Tentunya bahasa pemrograman PHP berbeda dengan HTML, pada PHP Script atau kode yang dibuat tidak dapat ditampilkan pada halaman atau muka website begitu saja, tapi harus diproses terlebih dahulu oleh web server lalu ditampilkan dalam bentuk halaman website di web browser, Script PHP juga dapat disisipkan pada HTML dan Script PHP selalu diawali dengan &lt;php dan diakhiri dengan ?&gt;.</p>
+        <p>Hypertext Preprocessor atau PHP adalah suatu bahasa pemrograman yang digunakan untuk membuat web dinamis, meskipun bisa juga digunakan untuk membuat program lain. Tentunya bahasa pemrograman PHP berbeda dengan HTML, pada PHP Script atau kode yang dibuat tidak dapat ditampilkan pada halaman atau muka website begitu saja, tapi harus diproses terlebih dahulu oleh web server lalu ditampilkan dalam bentuk halaman website di web browser, Script PHP juga dapat disisipkan pada HTML dan Script PHP selalu diawali dengan &lt;?php dan diakhiri dengan ?&gt;.</p>
         <p><a href="https://m.liputan6.com/hot/read/4683359/php-adalah-bagian-dalam-bahasa-pemrograman-ketahui-jenis-jenisnya">Baca Selengkapnya..</a></p>
       </div>
       
